<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-sound-ymfm</artifactId>
  <version>0.0.13</version>

  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <id>read-properties</id>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>21</source> <!-- TODO release causes compilation failure why? -->
          <target>21</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Dvavi.test.volume=@{vavi.test.volume}
            -Dmdsound.pcm.path=@{mdsound.pcm.path}
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.0.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-serdes</artifactId>
      <version>1.0.12</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-archive</artifactId>
      <version>1.1.10</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-sound</artifactId>
      <version>1.0.22</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.16</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
